# cash-flow

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
service/: __main__.py  alembic.ini  database.py  main.py  settings.py  tables.py
service/db/: __init__.py  models.py
service/db/migrations/: env.py
service/db/migrations/versions/: 5c0ad90431bc_.py
