[tool.poetry]
name = "cash-flow"
version = "0.1.0"
description = ""
authors = ["WaveOfCoding <waveformwstcrz@gmail.com>"]
readme = "README.md"
packages = [{include = "cash_flow"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
